--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.9.5",
+        "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.1",
         "@testing-library/user-event": "^7.2.1",
+        "node-sass": "^4.13.1",
+        "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-redux": "^7.2.0",
