--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "verapdf-webapp-gui-fork",
+    "name": "verapdf-webapp",
     "homepage": "/demo",
     "version": "0.1.0",
     "private": true,
@@ -45,6 +45,7 @@
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.2",
+        "http-proxy-middleware": "^1.0.2",
         "prettier": "^1.19.1"
     }
 }
