--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.0",
         "redux": "^4.0.5",
-        "redux-actions": "^2.6.5"
+        "redux-actions": "^2.6.5",
+        "redux-thunk": "^2.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
