--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.4.1",
         "@testing-library/user-event": "^7.2.1",
+        "classnames": "^2.2.6",
         "node-sass": "^4.13.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
