--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --testURL='http://localhost/demo' --testMatch '**/__tests__/**/*.test.js'",
         "eject": "react-scripts eject",
         "lint": "eslint ./ —ext .js"
     },
@@ -44,6 +44,9 @@
         ]
     },
     "devDependencies": {
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
+        "enzyme-to-json": "^3.4.4",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.2",
