--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test --testURL='http://localhost/demo' --testMatch '**/__tests__/**/*.test.js'",
         "eject": "react-scripts eject",
-        "lint": "eslint ./ —ext .js"
+        "lint": "eslint --ext .jsx,.js ./"
     },
     "eslintConfig": {
         "extends": "react-app"
