--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-dropzone": "^10.2.2",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.0",
         "redux": "^4.0.5",
         "redux-actions": "^2.6.5",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
