Update context path to /api for all the services

--- a/docker/nginx/conf.d/staging.conf
+++ b/docker/nginx/conf.d/staging.conf
@@ -2,6 +2,9 @@ server {
     listen       80;
     server_name  localhost;
 
+    client_max_body_size 100m;
+    client_body_timeout 30s;
+
     root   /usr/share/nginx/html;
 
     # Landing page
@@ -16,8 +19,27 @@ server {
     }
 
     # Application API: file storage service
-    location /api/file {
-        proxy_pass                       http://local-storage-service:8080/api/file;
+    location /api/files {
+        proxy_pass                       http://local-storage-service:8080/api/files;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
+
+    location /api/status/file-storage {
+        proxy_pass                       http://local-storage-service:8080/api/status;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
+
+    # Application API: jobs service
+    location /api/jobs {
+        proxy_pass                       http://job-service:8080/api/jobs;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
+
+    location /api/status/job-service {
+        proxy_pass                       http://job-service:8080/api/status;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
