--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^9.4.1",
         "@testing-library/user-event": "^7.2.1",
         "classnames": "^2.2.6",
+        "lodash": "^4.17.15",
         "node-sass": "^4.13.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
