--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-dropzone": "^10.2.2",
+        "react-google-charts": "^3.0.15",
         "react-pdf": "^4.1.0",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
