--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
         "reselect": "^4.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --testURL='http://localhost/demo' --testMatch '**/__tests__/**/*.test.js'",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test --testURL='http://localhost/demo' --testMatch '**/__tests__/**/*.test.js'",
         "eject": "react-scripts eject",
         "lint": "eslint --ext .jsx,.js ./"
     },
@@ -49,6 +49,7 @@
         ]
     },
     "devDependencies": {
+        "copy-webpack-plugin": "^6.0.1",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.4.4",
@@ -57,6 +58,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "http-proxy-middleware": "^1.0.2",
         "mz": "^2.7.0",
-        "prettier": "^1.19.1"
+        "prettier": "^1.19.1",
+        "react-app-rewired": "^2.1.6"
     }
 }
