--- a/.docker/nginx/conf.d/staging.conf
+++ b/.docker/nginx/conf.d/staging.conf
@@ -38,6 +38,12 @@ server {
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
+    location /api/profiles {
+        proxy_pass                       http://job-service:8080/api/profiles;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
+
     location /api/status/job-service {
         proxy_pass                       http://job-service:8080/api/status;
         proxy_set_header Host            $host;
