--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^7.2.1",
         "classnames": "^2.2.6",
         "crypto-js": "^4.0.0",
+        "jquery": "^3.5.1",
         "lodash": "^4.17.15",
         "node-sass": "^4.13.1",
         "pdfjs-dist": "github:veraPDF/pdfjs-dist#v2.1.266-taggedPdf-0.1.1",
