--- a/.docker/nginx/conf.d/staging.conf
+++ b/.docker/nginx/conf.d/staging.conf
@@ -26,7 +26,7 @@ server {
     }
 
     location /api/status/file-storage {
-        proxy_pass                       http://file-storage:8080/api/status/file-storage;;
+        proxy_pass                       http://file-storage:8080/api/status/file-storage;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
