--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -3,8 +3,6 @@ name: Build gui, create docker image and push to github registries.
 on:
   push:
     branches: [ master ]
-  schedule:
-    - cron:  '30 6,18 * * *'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
@@ -15,7 +13,7 @@ env:
 
 jobs:
   build:
-
+    if: ${{ !startsWith(github.event.head_commit.message, 'Merge pull request') }}
     runs-on: ubuntu-latest
 
     steps:
