--- a/.docker/docker-compose.staging.yml
+++ b/.docker/docker-compose.staging.yml
@@ -10,6 +10,7 @@ services:
     depends_on:
       - file-storage
       - job-service
+      - worker
     ports:
       - ${GUI_PORT:-80}:80
     restart: always
