--- a/.docker/nginx/conf.d/staging.conf
+++ b/.docker/nginx/conf.d/staging.conf
@@ -49,4 +49,10 @@ server {
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
+
+    location /api/status/worker {
+        proxy_pass                       http://job-service:8080/api/status/worker;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
 }
