--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "jquery": "^3.5.1",
         "lodash": "^4.17.15",
         "node-sass": "^4.13.1",
-        "pdfjs-dist": "github:veraPDF/pdfjs-dist#v2.1.266-taggedPdf-0.1.1",
+        "pdfjs-dist": "git+https://github.com/veraPDF/pdfjs-dist.git",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
