--- a/.github/workflows/docker-images-tagged.yml
+++ b/.github/workflows/docker-images-tagged.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: Update git submodules
-        run: git submodule update --init --remote --recursive
+        run: git submodule update --init --recursive
       - name: Build React app
         run: npm ci && npm run build
       - name: Get tag name
