--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: Update git submodules
-        run: git submodule update --init --remote --recursive
+        run: git submodule update --init --recursive
       - name: Build React app
         run: npm ci && npm run build
       - name: Build gui Docker image
