--- a/.github/workflows/version-auto-increment.yml
+++ b/.github/workflows/version-auto-increment.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: Update git submodules
-        run: git submodule update --init --remote --recursive
+        run: git submodule update --init --recursive
       - name: Increment package version
         run: npm version patch --commit-hooks=false --git-tag-version=false
       - name: Get latest version
