--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "jquery": "^3.5.1",
         "lodash": "^4.17.15",
         "marked": "^4.1.0",
-        "node-sass": "^7.0.1",
+        "node-sass": "^8.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
@@ -65,5 +65,9 @@
         "mz": "^2.7.0",
         "prettier": "^1.19.1",
         "react-app-rewired": "^2.1.6"
+    },
+    "resolutions": {
+        "json5": "^2.2.2",
+        "nth-check": "^2.0.1"
     }
 }
