--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "@testing-library/react": "^9.4.1",
         "@testing-library/user-event": "^7.2.1",
         "classnames": "^2.2.6",
-        "crypto-js": "^4.0.0",
         "jquery": "^3.5.1",
         "lodash": "^4.17.15",
         "marked": "^4.1.0",
@@ -29,6 +28,7 @@
         "redux-actions": "^2.6.5",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
+        "spark-md5": "^3.0.2",
         "verapdf-js-viewer": "git+https://github.com/veraPDF/verapdf-js-viewer.git"
     },
     "scripts": {
