--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "node-sass": "^8.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
+        "react-arborist": "^3.2.0",
         "react-dom": "^16.13.0",
         "react-dropzone": "^10.2.2",
         "react-google-charts": "^3.0.15",
@@ -29,6 +30,7 @@
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "spark-md5": "^3.0.2",
+        "use-resize-observer": "^9.1.0",
         "verapdf-js-viewer": "git+https://github.com/veraPDF/verapdf-js-viewer.git"
     },
     "scripts": {
