Update dependencies version

--- a/.docker/nginx/conf.d/staging.conf
+++ b/.docker/nginx/conf.d/staging.conf
@@ -13,9 +13,9 @@ server {
     }
 
     # Application GUI
-    location /demo {
-        try_files $uri $uri/ /demo/index.html;
-        index /demo/index.html;
+    location /validate {
+        try_files $uri $uri/ /validate/index.html;
+        index /validate/index.html;
     }
 
     # Application API: file storage service
